# lisp_playground

./: Cargo.toml  LEXICAL_BINDING.md  README.md  rustfmt.toml
deleteme/: special_forms.rs
src/: builtins.rs  ctypes.rs  eval.rs  expressions.rs  lib.rs  main.rs  parser.rs  procs.rs  repl.rs  scope.rs  testbin.rs  token2expr.rs  tokenizer.rs
src/ast/: callables.rs  coercions.rs  ctypes.rs  errors.rs  expressions.rs  mod.rs  procs.rs  records.rs  values.rs  variables.rs
src/builtins/: functions.rs  mod.rs  namespace.rs  special_forms.rs
src/builtins/special_forms/: mod.rs
src/eval/: closures.rs  eval_exprs.rs  mod.rs
src/parser/: expr_builder.rs  mod.rs  token_handlers.rs  tokenizer.rs
tests/: builtin_tests.rs
