[package]
name = "interpret-lisp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "tester"
path = "src/testbin.rs"

[dependencies]
anyhow = "1.0.72"
lazy_static = "1.4.0"
litrs = "0.4.0"
regex = "1.9.3"
rustyline = "12.0.0"
thiserror = "1.0.48"

