[package]
name = "lisp_playground"
version = "0.1.0"
edition = "2021"

[lib]
name = "lisp_playground"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"


[dependencies]
anyhow = "1.0.72"
lazy_static = "1.4.0"
litrs = "0.4.0"
regex = "1.9.3"
rustyline = "12.0.0"
thiserror = "1.0.48"
itertools = "0.13.0"

